fixed login page logo alignment for different devices.

--- a/war/track/css/style.css
+++ b/war/track/css/style.css
@@ -116,8 +116,9 @@ body {
   margin-left: auto;*/
  
 }
-.header-title{
-    margin-left:45%;
+
+.header-title {
+    margin-left:40%;
     width: 100%;
 }
 .container{
